--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 @layer components {
   .icon-button {
-    @apply flex items-center justify-center p-3 space-x-2 text-base font-semibold transition-opacity rounded-full hover:opacity-80;
+    @apply flex items-center justify-center p-2 space-x-2 text-base font-semibold transition-opacity rounded-xl hover:opacity-80;
+  }
+  .icon-button > svg {
+    @apply w-5 h-5;
+  }
+  .popup-section {
+    @apply absolute right-0 z-50 p-3 mt-2 origin-top-right bg-white divide-y divide-gray-100 rounded-md shadow-lg dark:bg-gray-600 dark:text-gray-50 ring-1 ring-black ring-opacity-5 focus:outline-none top-full;
+  }
+  .popup-fixed-section {
+    @apply z-50 p-3 mt-2 origin-top-right bg-white divide-y divide-gray-100 rounded-md shadow-lg dark:bg-gray-600 dark:text-gray-50 ring-1 ring-black ring-opacity-5 focus:outline-none;
   }
   ._link_cs_chat {
     color: #ffffff;
@@ -27,4 +36,88 @@
   .custom-input {
     @apply w-full px-6 py-4 font-medium transition-colors bg-gray-100 border-0 rounded-md dark:bg-gray-800 dark:text-gray-50;
   }
+}
+@layer base {
+  .w-fit {
+    width: fit-content;
+  }
+  .sdaf {
+    @apply text-3xl font-bold dark:text-white;
+  }
+  .header {
+    @apply text-3xl font-bold dark:text-white;
+  }
+  .editor a {
+    @apply font-semibold text-blue-600 dark:text-blue-400;
+  }
+  .form-border-b {
+    @apply border-t-0 border-l-0 border-r-0;
+  }
+  form input,
+  textarea,
+  .input {
+    @apply w-full px-6 py-4 font-medium transition-colors border-gray-300 rounded-xl dark:bg-gray-800 dark:text-gray-50;
+  }
+}
+.textshadow-neon {
+  text-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #3b82f6,
+    0 0 0.8rem #3b82f6, 0 0 2.8rem #3b82f6, inset 0 0 1.3rem #3b82f6;
+}
+.e-schedule {
+  @apply dark:!bg-gray-900 bg-gray-900;
+}
+.e-schedule .e-schedule-toolbar .e-toolbar-items {
+  @apply dark:bg-gray-800;
+}
+.e-schedule .e-schedule-toolbar .e-tbar-btn {
+  @apply dark:bg-gray-700;
+}
+.e-toolbar .e-toolbar-items .e-toolbar-item .e-tbar-btn-text {
+  @apply dark:text-gray-50;
+}
+.e-schedule .e-vertical-view .e-left-indent-wrap table tbody td {
+  @apply dark:bg-gray-800;
+}
+.e-schedule .e-vertical-view .e-date-header-wrap table tbody td {
+  @apply dark:bg-gray-800 dark:text-gray-100 dark:border-gray-400;
+}
+.e-schedule .e-vertical-view .e-time-cells-wrap table td {
+  @apply dark:bg-gray-800 dark:text-gray-100 dark:border-gray-400 dark:border-b-0;
+}
+.e-schedule .e-vertical-view .e-time-cells-wrap .e-time-cells {
+  @apply dark:border-b;
+}
+.e-schedule .e-vertical-view .e-work-cells {
+  @apply dark:border-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600;
+}
+/* .e-schedule .e-vertical-view .e-work-cells:hover {
+    @apply dark:border-gray-400 dark:bg-gray-700 hover:bg-gray-600;
+  } */
+.e-schedule .e-vertical-view .e-work-hours {
+  @apply dark:bg-gray-800;
+}
+.e-schedule .e-vertical-view .e-left-indent-wrap table tbody td {
+  @apply dark:border-gray-400;
+}
+.dark .rbc-off-range {
+  color: white;
+}
+.dark .rbc-btn-group button:not(.rbc-active) {
+  color: white;
+}
+.sp-header {
+  padding-left: 8px;
+  position: relative;
+}
+.sp-header::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  border-radius: 9999px;
+  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #3b82f6,
+    0 0 0.8rem #3b82f6, 0 0 2.8rem #3b82f6, inset 0 0 1.3rem #3b82f6;
+  background-color: #3b82f6;
 }
